chore: Java 25 style fixes